# dev-c230

./: README.md
lab1/: CMakeLists.txt  Задание1_Threads_2022_июнь.docx
lab1/misc/texts/: 10.txt  11.txt  12.txt  13.txt  15.txt  18.txt  19.txt  4.txt  6.txt  7.txt
lab1/src/: main.cpp  random_generator.h
lab1/src/task1/: task1.cpp  task1.h
lab1/src/task3/: task3.cpp  task3.h
lab1/src/task4/: task4.cpp  task4.h
lab1/src/task5/: task5.cpp  task5.h
lab1/src/task6/: task6.cpp  task6.h
lab2/: CMakeLists.txt
lab2/src/: main.cpp
lab2/src/task1/: TSStack.cpp  TSStack.h  task1.cpp  task1.h
lab2/src/task2/: task.cpp  task2.cpp  task2.h
lab2/src/task3/: TSSingletone.h  task3.cpp  task3.h
lab2/src/task4/: task4.cpp  task4.h
lab2/src/task5/: task5.cpp  task5.h
lab3/: .clang-format  .gitignore  CMakeLists.txt
lab3/src/: main.cpp  utils.h
lab3/src/task1/: task1.cpp  task1.h
lab3/src/task2/: task2.cpp
lab3/src/task3/: task3.cpp
lab3/src/task4/: task4.cpp  task4.h
lab3/src/task5/: task5.cpp
lab3/src/task6/: ThreadPool.cpp  ThreadPool.h  task6.cpp  task6.h
lab3/src/task7/: RQueue.h  task7.cpp  task7.h
lab4/: CMakeLists.txt
lab4/src/: main.cpp  utils.h
lab4/src/CoGen/: CoroTask.cpp  CoroTask.h  Generator.h
lab4/src/task1/: task1.cpp
lab4/src/task3/: SpinMutex.h  task3.cpp
